Fix perfect scrollbar effects and size of the buttons on navigation [SCI-8567] (#5525)

--- a/app/assets/stylesheets/extend/perfect-scrollbar.scss
+++ b/app/assets/stylesheets/extend/perfect-scrollbar.scss
@@ -44,25 +44,6 @@
   background-color: transparent;
 }
 
-.ps:hover > .ps__rail-x,
-.ps:hover > .ps__rail-y,
-.ps--focus > .ps__rail-x,
-.ps--focus > .ps__rail-y,
-.ps--scrolling-x > .ps__rail-x,
-.ps--scrolling-y > .ps__rail-y {
-  opacity: 0.6;
-}
-
-.ps .ps__rail-x:hover,
-.ps .ps__rail-y:hover,
-.ps .ps__rail-x:focus,
-.ps .ps__rail-y:focus,
-.ps .ps__rail-x.ps--clicking,
-.ps .ps__rail-y.ps--clicking {
-  background-color: $color-gainsboro;
-  opacity: 0.9;
-}
-
 /*
  * Scrollbar thumb styles
  */
@@ -90,18 +71,6 @@
   /* please don't change 'position' */
   opacity: .5;
   position: absolute;
-}
-
-.ps__rail-x:hover > .ps__thumb-x,
-.ps__rail-x:focus > .ps__thumb-x,
-.ps__rail-x.ps--clicking .ps__thumb-x {
-  height: 10px;
-}
-
-.ps__rail-y:hover > .ps__thumb-y,
-.ps__rail-y:focus > .ps__thumb-y,
-.ps__rail-y.ps--clicking .ps__thumb-y {
-  width: 10px;
 }
 
 /* MS supports */
